k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: target-manager
  template:
    metadata:
      labels:
        app: target-manager
    spec:
      containers:
        - name: target-manager
          image: defacementmonitoracr.azurecr.io/target-manager:0.1.1
          ports:
            - containerPort: 8000
