k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-manager
spec:
  selector:
    app: target-manager
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
